test/spec_vectors/i32/fail/module_14.wat
(module (func $type-unary-operand-empty-in-local.tee (local i32) (local.tee 0 (i32.eqz)) (drop)))